custom: [bugfix] image width on small screens

--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -397,7 +397,7 @@ $button-size: 1.5rem;
 		@include grid(12,4);
 		@include prefix(12,0.5);
 		@include suffix(12,0.5);
-		.itemscope > div.user-info { max-width: 225px; }
+		.itemscope > img.bio-photo { max-width: 225px; }
 		div.itemscope, h3, p, .author-social {
 			display: block;
 			max-width: 250px;
